--- a/index.html
+++ b/index.html
@@ -1,7 +1,46 @@
 <!DOCTYPE html>
-<html>
-  <body>
-    <h1>Welcome to My New Website</h1>
-    <p>This site is under construction.</p>
-  </body>
+<html lang="zh-CN">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>个人主页 | Your Name</title>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <div class="container">
+        <aside class="sidebar">
+            <div class="profile-section">
+                <img src="https://via.placeholder.com/150" alt="My Photo" class="avatar">
+            </div>
+            
+            <nav class="nav-links">
+                <ul>
+                    <li><a href="https://linkedin.com/in/yourprofile" target="_blank">LinkedIn</a></li>
+                    <li><a href="resume.pdf" target="_blank">Resume</a></li>
+                    <li><a href="robotics-story.html">My Robotics Story</a></li>
+                    <li><a href="research.html">My Research</a></li>
+                </ul>
+            </nav>
+        </aside>
+
+        <main class="main-content">
+            <section class="bio">
+                <h1>你好，我是 [你的名字]</h1>
+                <div class="bio-text">
+                    <p>
+                        这里是你的自我介绍第一段。你可以聊聊你目前所在的学校、研究方向，或者你对机器人技术（Robotics）的热情起源。
+                    </p>
+                    <p>
+                        这里是第二段。详细描述一下你的研究重点，比如机器视觉、运动规划或是人机交互。分享一下你解决过的有趣问题。
+                    </p>
+                    <p>
+                        第三段可以写写你的业余爱好，或者你对未来的展望。
+                    </p>
+                </div>
+            </section>
+        </main>
+    </div>
+
+</body>
 </html>
