Education Page done

--- a/index.html
+++ b/index.html
@@ -20,15 +20,18 @@
                 <ul class="lang-en">
                     <li><a href="https://linkedin.com/in/yike-shi2004" target="_blank">LinkedIn</a></li>
                     <li><a href="resume.pdf" target="_blank">Resume</a></li>
-                    <li><a href="robotics-story.html">My Robotics Story</a></li>
-                    <li><a href="research.html">My Research</a></li>
-                    <li><a href="research.html">Teaching and Leadership</a></li>
+                    <li><a href="education/">Education History</a></li>
+                    <li><a href="robotics-story.html">Robotics Story</a></li>
+                    <li><a href="research.html">Research</a></li>
+                    <li><a href="teaching.html">Teaching and Leadership</a></li>
                 </ul>
                 <ul class="lang-zh" style="display: none;">
-                    <li><a href="https://linkedin.com/in/yourprofile" target="_blank">领英 (LinkedIn)</a></li>
-                    <li><a href="resume-zh.pdf" target="_blank">个人简历</a></li>
+                    <li><a href="https://linkedin.com/in/yike-shi2004" target="_blank">领英 (LinkedIn)</a></li>
+                    <li><a href="resume.pdf" target="_blank">个人简历</a></li>
+                    <li><a href="education/">教育经历</a></li>
                     <li><a href="robotics-story-zh.html">我的机器人故事</a></li>
-                    <li><a href="research-zh.html">我的研究项目</a></li>
+                    <li><a href="research-zh.html">研究项目</a></li>
+                    <li><a href="teaching-zh.html">教学与领导力</a></li>
                 </ul>
             </nav>
         </aside>
@@ -37,17 +40,18 @@
             <div class="lang-en">
                 <h1>Hi, I'm Yike</h1>
                 <div class="bio-text">
-                    <p>Welcome to my personal website. I am currently a junior Computer Engineering Student at <em><b>University of California, Los Angeles (UCLA)</b></em>. As a Researcher,  I am passionate about Robotics and AI. I am supervised by Dr. <a href="https://yuchencui.cc/" target="_blank" class="name-link">Yuchen Cui</a> at UCLA Robot Intelligence Lab (<a href="https://ucla-robot-intelligence-lab.github.io/" target="_blank" class="name-link">URIL</a>).</p>
+                    <p>Welcome to my personal website. I am currently a junior Computer Engineering Student at <em><b>University of California, Los Angeles (UCLA)</b></em>. As a Researcher, I am passionate about Robotics and AI. I am supervised by Prof. <a href="https://yuchencui.cc/" target="_blank" class="name-link">Yuchen Cui</a> at UCLA Robot Intelligence Lab (<a href="https://ucla-robot-intelligence-lab.github.io/" target="_blank" class="name-link">URIL</a>).</p>
                     <p>Currently, I am working on long-horizon robotics imitation learning from different inputs with complex hardware. Check Research Part for details!</p>
-                    <p>You can reach me at <em><b>yikeshi9248 [at] ucla.edu</b></em>. Also check my coursework and education story <a href="https://yuchencui.cc/" target="_blank" class="name-link">here</a>.</p>
+                    <p>You can reach me at <em><b>yikeshi9248 [at] ucla.edu</b></em>. Also check my coursework and education story <a href="education" class="name-link">here</a>.</p>
                 </div>
             </div>
 
             <div class="lang-zh" style="display: none;">
                 <h1>你好，我是石逸可</h1>
                 <div class="bio-text">
-                    <p>欢迎来到我的个人主页。我是一名对机器人和人工智能充满热情的科研工作者。</p>
-                    <p>目前，我正致力于长程任务和模仿学习的研究。</p>
+                    <p>欢迎来到我的个人主页。我是加州大学洛杉矶分校（UCLA）计算机工程专业大三学生。作为一名研究者，我对机器人和人工智能充满热情。我在UCLA机器人智能实验室（URIL）由<a href="https://yuchencui.cc/" target="_blank" class="name-link">崔宇晨教授</a>指导。</p>
+                    <p>目前，我正致力于使用复杂硬件的不同输入进行长程机器人模仿学习的研究。详细内容请查看研究部分！</p>
+                    <p>您可以通过 <em><b>yikeshi9248 [at] ucla.edu</b></em> 联系我。也可以<a href="education" class="name-link">在此</a>查看我的课程和教育经历。</p>
                 </div>
             </div>
         </main>
