Robotics Left with 2 Youtube links

--- a/education/index.html
+++ b/education/index.html
@@ -22,7 +22,7 @@
                     <li><a href="https://linkedin.com/in/yike-shi2004" target="_blank">LinkedIn</a></li>
                     <li><a href="../resume.pdf" target="_blank">Resume</a></li>
                     <li><a href="./">Education History</a></li>
-                    <li><a href="../robotics-story.html">Robotics Story</a></li>
+                    <li><a href="../robotics/">Robotics Story</a></li>
                     <li><a href="../research.html">Research</a></li>
                     <li><a href="../teaching.html">Teaching and Leadership</a></li>
                 </ul>
@@ -31,7 +31,7 @@
                     <li><a href="https://linkedin.com/in/yike-shi2004" target="_blank">领英</a></li>
                     <li><a href="../resume.pdf" target="_blank">个人简历</a></li>
                     <li><a href="./">教育经历</a></li>
-                    <li><a href="../robotics-story-zh.html">机器人故事</a></li>
+                    <li><a href="../robotics/">机器人故事</a></li>
                     <li><a href="../research-zh.html">研究项目</a></li>
                     <li><a href="../teaching-zh.html">教学与领导力</a></li>
                 </ul>
@@ -223,7 +223,7 @@
                             <h3>高中文凭</h3>
                             <div class="institution">金陵中学 <br> UCLA全球课堂，中美班(ZMB)</div>
                             <ul>
-                                <li>最佳毕业生，GPA排名1/57</li>
+                                <li>优秀毕业生，GPA排名1/57</li>
                                 <li>AP杰出学者（9门AP课程满分5分）</li>
                                 <li>学生会主席</li>
                                 <li>VEX机器人俱乐部主席</li>
