--- a/index.html
+++ b/index.html
@@ -22,16 +22,16 @@
                     <li><a href="resume.pdf" target="_blank">Resume</a></li>
                     <li><a href="education/">Education History</a></li>
                     <li><a href="robotics/">Robotics Story</a></li>
-                    <li><a href="research.html">Research</a></li>
-                    <li><a href="teaching.html">Teaching and Leadership</a></li>
+                    <li><a href="research/">Research</a></li>
+                    <li><a href="teaching/">Teaching and Leadership</a></li>
                 </ul>
                 <ul class="lang-zh" style="display: none;">
                     <li><a href="https://linkedin.com/in/yike-shi2004" target="_blank">领英 (LinkedIn)</a></li>
                     <li><a href="resume.pdf" target="_blank">个人简历</a></li>
                     <li><a href="education/">教育经历</a></li>
                     <li><a href="robotics/">我的机器人故事</a></li>
-                    <li><a href="research-zh.html">研究项目</a></li>
-                    <li><a href="teaching-zh.html">教学与领导力</a></li>
+                    <li><a href="research/">研究项目</a></li>
+                    <li><a href="teaching/">教学与领导力</a></li>
                 </ul>
             </nav>
         </aside>
