--- a/education/index.html
+++ b/education/index.html
@@ -23,8 +23,8 @@
                     <li><a href="../resume.pdf" target="_blank">Resume</a></li>
                     <li><a href="./">Education History</a></li>
                     <li><a href="../robotics/">Robotics Story</a></li>
-                    <li><a href="../research.html">Research</a></li>
-                    <li><a href="../teaching.html">Teaching and Leadership</a></li>
+                    <li><a href="../research/">Research</a></li>
+                    <li><a href="../teaching/">Teaching and Leadership</a></li>
                 </ul>
                 <ul class="lang-zh" style="display: none;">
                     <li><a href="../index.html">首页</a></li>
@@ -32,8 +32,8 @@
                     <li><a href="../resume.pdf" target="_blank">个人简历</a></li>
                     <li><a href="./">教育经历</a></li>
                     <li><a href="../robotics/">机器人故事</a></li>
-                    <li><a href="../research-zh.html">研究项目</a></li>
-                    <li><a href="../teaching-zh.html">教学与领导力</a></li>
+                    <li><a href="../research/">研究项目</a></li>
+                    <li><a href="../teaching/">教学与领导力</a></li>
                 </ul>
             </nav>
         </aside>
