Ready. Only logic issue is CHIN page jump to CHIN?

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <div class="lang-zh" style="display: none;">
                 <h1>你好，我是石逸可</h1>
                 <div class="bio-text">
-                    <p>欢迎来到我的个人主页。我是加州大学洛杉矶分校（UCLA）计算机工程专业大三学生。作为一名研究者，我对机器人和人工智能充满热情。我在UCLA机器人智能实验室（URIL）由<a href="https://yuchencui.cc/" target="_blank" class="name-link">崔宇晨教授</a>指导。</p>
+                    <p>欢迎来到我的个人主页。我是加州大学洛杉矶分校（UCLA）计算机工程专业大三学生。作为一名研究者，我对机器人和人工智能充满热情。我在UCLA机器人智能实验室（URIL）由<a href="https://yuchencui.cc/" target="_blank" class="name-link">崔雨晨教授</a>指导。</p>
                     <p>目前，我正致力于使用复杂硬件的不同输入进行长程机器人模仿学习的研究。详细内容请查看研究部分！</p>
                     <p>您可以通过 <em><b>yikeshi9248 [at] ucla.edu</b></em> 联系我。也可以<a href="education" class="name-link">在此</a>查看我的课程和教育经历。</p>
                 </div>
